--- a/.github/workflows/ci-codecov.yml
+++ b/.github/workflows/ci-codecov.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the ci-codecov image
-      run: docker build ci/. --file Dockerfile --tag ci-codecov:$(date +%s)
+      run: docker build . --file ci/Dockerfile --tag ci-codecov:$(date +%s)
     - name: Run the ci-codecov image
       run: docker run --env CODECOV_TOKEN=ae3a67b2-a610-4f81-acd5-1a617c4b10d1 --security-opt seccomp=unconfined -v $(pwd):/source ci-codecov:$(date +%s)
       
