--- a/.github/workflows/ci-codecov.yml
+++ b/.github/workflows/ci-codecov.yml
@@ -14,9 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the ci-codecov image
+    - name: Build and tun the ci-codecov ci-image
       run: |
-        docker build . --file ci/Dockerfile --tag ci-codecov:$(date +%s) && \
-        docker run --env CODECOV_TOKEN=ae3a67b2-a610-4f81-acd5-1a617c4b10d1 --security-opt seccomp=unconfined -v $(pwd):/source ci-codecov:$(date +%s)
+        export tag=ci-codecov:$(date +%s)
+        docker build . --file ci/Dockerfile --tag $tag && \
+        docker run --env CODECOV_TOKEN=ae3a67b2-a610-4f81-acd5-1a617c4b10d1 --security-opt seccomp=unconfined -v $(pwd):/source $tag
 
       
