--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        comptime: [true, false]
+
+        ### Comptime tests and windows builds can't run due memory limitation
+        #os: [ubuntu-latest, macos-latest, windows-latest]
+        #comptime: [true, false]
+      
+        os: [ubuntu-latest, macos-latest]
+        comptime: [false]
         include:
           - os: windows-latest
             crlf: fix
