Build with zig 0.10.0 for a while

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup Zig
         uses: goto-bus-stop/setup-zig@v1
         with:
-          version: master
+          version: 0.10.0
 
       - name: Download kcov
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.comptime == false }}
