--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Zig
-        uses: goto-bus-stop/setup-zig@v1
+        uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.11.0
 
       - name: Download kcov
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.comptime == false }}
