--- a/samples/dotnet/mustache.samples/mustache.samples.csproj
+++ b/samples/dotnet/mustache.samples/mustache.samples.csproj
@@ -1,4 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <RollForward>LatestMajor</RollForward>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\mustache\mustache.csproj" />
@@ -15,13 +22,4 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
   </ItemGroup>  
-
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-  
-
 </Project>
