--- a/samples/dotnet/mustache/mustache.csproj
+++ b/samples/dotnet/mustache/mustache.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <RollForward>LatestMajor</RollForward>
   </PropertyGroup>
 
 </Project>
