Enable windows CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,8 @@ jobs:
   test:
     strategy:
       fail-fast: false
-      matrix:
-
-        ### Comptime tests and windows builds can't run due memory limitation
-        #os: [ubuntu-latest, macos-latest, windows-latest]
-        #comptime: [true, false]
-      
-        os: [ubuntu-latest, macos-latest]
+      matrix:      
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           #- os: windows-latest
           #  crlf: fix
