--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-22.04, macos-latest, windows-latest]
         include:
           - os: windows-latest
             crlf: fix
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             coverage: -Dtest-coverage=true
     runs-on: ${{matrix.os}}
     steps:
@@ -34,7 +34,7 @@ jobs:
           version: master
 
       - name: Download kcov
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+        if: ${{ matrix.os == 'ubuntu-22.04' }}
         run: |
           sudo apt-get install -y kcov
 
@@ -45,7 +45,7 @@ jobs:
           zig build test -Dcomptime-tests=false ${{ matrix.coverage }}
 
       - name: Upload Codecov
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+        if: ${{ matrix.os == 'ubuntu-22.04' }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
